grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ => choice(
      $.comment,
      $.doc_comment,
      $.block_comment,
      $._statement_core,
    ),

    _statement_core: $ => choice(
      $.if_directive,      // Before directive - conditional #if
      $.if_win_directive,  // Before directive - conditional #IfWin*
      $.directive,
      $.hotkey,
      $.hotstring_definition,
      $.gui_action,         // Before label - matches "GuiName:SubCommand" patterns like "MyGui:Add"
      $.gui_action_spaced,  // Before label - matches "GuiName: SubCommand" patterns (with space)
      $.gui_options,        // Before label - matches "GuiName:+/-Option" patterns like "MyGui:-Caption"
      $.gui_options_spaced, // Before label - matches "GuiName: +/-Option" patterns with space
      $.gui_target,   // Before label - matches "GuiName:," to prevent false labels in injection
      $.drive_letter, // Before label for uppercase drive-letter references like "C:"
      $.label,
      $.class_definition,
      $.function_definition,
      // Control flow statements (before keyword!)
      $.if_statement,
      $.while_statement,
      $.loop_statement,
      $.for_statement,
      $.try_statement,
      $.switch_statement,
      $.return_statement,
      // Expressions that can appear at statement level
      $.continuation_assignment_expression,
      $.legacy_assignment_expression,
      $.assignment_expression,
      $.method_call,
      $.member_expression,
      $.index_expression,
      $.function_call,
      $.if_command,  // Before command - matches identifier, args with block + else
      $.command,
      $.array_literal,
      $.quoted_continuation_string,
      $.string,
      $.number,
      $.boolean,
      // NOTE: parenthesized_expression removed from _statement to reduce state count
      // It's still in _expression for conditions
      $.keyword,
      // Note: gui_option_flag NOT in _statement - would cause label + gui_option_flag to beat gui_options/gui_options_spaced
      // Standalone +Option in command args parses as operator + identifier, with identifier
      // getting @constant highlighting via #match? rule on option names
      $.operator,
      prec(4, $.variable_ref),
      $.identifier,
      $._punctuation,
    ),

    block_comment: $ => prec(101, seq(
      '/*',
      repeat(choice(
        /[^*]+/,
        /\*+[^/*]/
      )),
      '*/'
    )),

    // Generic directive: #Name args (for #Include, #SingleInstance, etc.)
    // Conditional directives (#if, #ifWin*) have dedicated rules with higher precedence
    label: $ => seq(
      field('name', $.identifier),
      token.immediate(':')
    ),

    // GUI action (like MyGui:Add or MyGui:Show) - higher precedence than label
    // to prevent "MyGui:Add" from being parsed as label + identifier during injection
    // Captures GUI name and sub-command as separate fields for highlighting
    // Both : and action must be immediate (no whitespace) to distinguish from label + newline + code
    block: $ => repeat1($._statement),

    // Parenthesized expression for conditions
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // Statement block (braces + optional statements) for control flow
    statement_block: $ => seq('{', optional($.block), '}'),

    // Control flow statements - support both braced blocks and single statements
    if_statement: $ => prec.right(seq(
      'if',
      field('condition', seq(
        choice(
          $.parenthesized_expression,
          seq(choice('!', 'not', '~'), $.parenthesized_expression)
        ),
        repeat(seq(
          choice('&&', '||', 'and', 'or'),
          choice(
            $.parenthesized_expression,
            seq(choice('!', 'not', '~'), $.parenthesized_expression)
          )
        ))
      )),
      field('consequence', choice($.statement_block, $._statement_core)),
      optional(field('alternative', $.else_clause))
    )),

    // Legacy if-commands (IfInString, IfExist, etc.) with block/else support
    // Uses _block_after_newline to distinguish from regular commands with { in arguments:
    //   - "Send, {Enter}" - same line { = command argument
    //   - "IfNotInString, var, val\n{" - newline before { = if_command block
    else_clause: $ => seq(
      'else',
      choice($.if_statement, $.if_command, $.statement_block, $._statement_core)
    ),

    while_statement: $ => seq(
      'while',
      field('condition', choice(
        $.parenthesized_expression,
        seq(choice('!', 'not', '~'), $.parenthesized_expression)
      )),
      field('body', choice($.statement_block, $._statement_core))
    ),

    loop_statement: $ => prec.right(3, seq(
      ci('loop'),
      optional(choice(
        // Comma-style variant: loop, parse, ...
        seq(
          ',',
          field('type', $.loop_type),
          optional(field('arguments', $.loop_arguments))
        ),
        // Count-based: loop 10 or loop count
        field('count', choice($.number, $.identifier))
      )),
      field('body', choice($.statement_block, $._statement_core))
    )),

    loop_type: $ => choice(ci('parse'), ci('files'), ci('read'), ci('reg')),

    loop_arguments: $ => /[^\r\n{]+/,

    for_statement: $ => seq(
      'for',
      field('key', $.identifier),
      optional(seq(',', field('value', $.identifier))),
      'in',
      field('collection', $._expression),
      field('body', choice($.statement_block, $._statement_core))
    ),

    switch_statement: $ => seq(
      'switch',
      field('value', $._expression),
      '{',
      repeat($.case_clause),
      optional($.default_clause),
      '}'
    ),

    case_clause: $ => seq(
      'case',
      field('values', seq($._expression, repeat(seq(',', $._expression)))),
      ':',
      optional($.block)
    ),

    default_clause: $ => seq(
      'default',
      ':',
      optional($.block)
    ),

    function_definition: $ => prec.dynamic(10, seq(
      field('name', $.identifier),
      token.immediate('('),
      optional($.parameter_list),
      ')',
      '{',
      optional(field('body', $.block)),
      '}'
    )),

    function_call: $ => prec.dynamic(5, seq(
      field('name', $.identifier),
      token.immediate('('),
      optional($.argument_list),
      ')'
    )),

    // Member expression with identifier or number property (for pos.1, pos.2 syntax)
    member_expression: $ => prec.left(1, seq(
      field('object', choice($.identifier, $.member_expression, $.this_expression, $.base_expression)),
      token.immediate('.'),
      field('property', choice($.identifier, $.number))
    )),

    command: $ => prec.right(2, choice(
      // Commands can omit the comma when the argument is a forced expression:
      //   Run % "*RunAs " A_AhkPath
      prec(20, seq(
        field('name', $.identifier),
        field('arguments', $.force_expression)
      )),
      // Command terminated by statement_end (before next label/command)
      seq(
        field('name', $.identifier),
        ',',
        optional($.command_arguments),
        $._statement_end
      ),
      // Regular command (arguments consume to natural boundary)
      seq(
        field('name', $.identifier),
        ',',
        optional($.command_arguments)
      )
    )),

    // Structured command arguments - parses %var%, GUI patterns, strings, etc. directly
    // No injection needed - eliminates recursion problem
    // All patterns exclude \r\n to ensure command terminates at newline
    // prec.right prefers continuing repeat over ending command_arguments
    command_arguments: $ => prec.right(repeat1(choice(
      $.command_continuation_section, // multiline command text with optional trailing args
      $.force_expression,      // % expr - FIRST so it wins over variable_ref
      $.variable_ref,          // %name% - variable references
      $.string,                // "text" - quoted strings
      $.number,                // 123 - numeric literals
      $.gui_action,            // MyGui:Add - GUI subcommands (no space)
      $.gui_action_spaced,     // MyGui: Add - GUI subcommands (with space)
      $.gui_options,            // MyGui:-Caption - GUI options (no space)
      $.gui_options_spaced,    // MyGui: -Caption - GUI options (with space)
      $.gui_target,            // MyGui:, - GUI target reference
      $.gui_option_flag,       // +Caption -Border - standalone option flags
      $.drive_letter,          // C: - drive letter (for file paths)
      $.identifier,            // word - plain identifiers
      alias(token(prec(100, '/*')), $.path_wildcard),  // file wildcard in paths, not a block comment
      ',',                     // comma separator
      /[ \t]+/,                // whitespace (not newline)
      /[^a-zA-Z0-9_%,:" \t\r\n?+=\-!&|<>^~]+/, // symbols except expression operators
    ))),

    // Variable reference: %var% syntax
    _argument: $ => choice(
      prec(12, alias($._argument_assignment_expression, $.assignment_expression)),
      prec(11, $._string_identifier_concat),
      prec(11, $._identifier_string_concat),
      $._expression
    ),

    // RHS for argument assignments - allows concat patterns in addition to regular expressions
    // Used only inside argument_list to enable implicit concatenation in assignment RHS
    // Like _argument, these patterns are safe because arguments are delimited by ) or ,
    argument_list: $ => seq(
      $._argument,
      repeat(seq(',', $._argument))
    ),

    _expression: $ => choice(
      $.concatenation_expression,  // Implicit concatenation of adjacent expressions
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.new_expression,
      $.assignment_expression,
      $.this_expression,
      $.base_expression,
      $.quoted_continuation_string,
      $.string,
      $.number,
      $.boolean,
      $.variable_ref,  // %var% syntax
      $.array_literal,
      $.object_literal,
      $.index_expression,
      $.member_expression,
      $.method_call,
      $.identifier,
      $.function_call,
      $.parenthesized_expression,
    ),

    // Elements that can participate in concatenation
    binary_expression: $ => choice(
      // Logical OR (precedence 2)
      prec.left(2, seq(field('left', $._expression), choice('||', 'or'), field('right', $._expression))),
      // Logical AND (precedence 3)
      prec.left(3, seq(field('left', $._expression), choice('&&', 'and'), field('right', $._expression))),
      // Bitwise OR (precedence 4)
      prec.left(4, seq(field('left', $._expression), '|', field('right', $._expression))),
      // Bitwise XOR (precedence 5)
      prec.left(5, seq(field('left', $._expression), '^', field('right', $._expression))),
      // Bitwise AND (precedence 6)
      prec.left(6, seq(field('left', $._expression), '&', field('right', $._expression))),
      // Equality (precedence 7)
      prec.left(7, seq(field('left', $._expression), choice('=', '==', '!=', '<>'), field('right', $._expression))),
      // Comparison (precedence 8)
      prec.left(8, seq(field('left', $._expression), choice('<', '>', '<=', '>='), field('right', $._expression))),
      // Bitwise shift (precedence 9)
      prec.left(9, seq(field('left', $._expression), choice('<<', '>>'), field('right', $._expression))),
      // Addition/Subtraction (precedence 10)
      prec.left(10, seq(field('left', $._expression), choice('+', '-'), field('right', $._expression))),
      // Multiplication/Division (precedence 11)
      prec.left(11, seq(field('left', $._expression), choice('*', '/', '//', '%'), field('right', $._expression))),
      // Concatenation (precedence 10)
      prec.left(10, seq(field('left', $._expression), '.', field('right', $._expression))),
      // Power (precedence 12, RIGHT associative)
      prec.right(12, seq(field('left', $._expression), '**', field('right', $._expression))),
    ),

    // Unary expressions
    assignment_expression: $ => prec.right(1, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      field('operator', choice(':=', '+=', '-=', '*=', '/=', '.=')),
      field('right', $._expression)
    )),

    this_expression: $ => 'this',
    boolean: $ => choice('true', 'false'),

    string: $ => choice(
      seq('"', repeat(choice($.escape_sequence, token.immediate('""'), $._double_string_content)), token.immediate('"')),
      seq("'", repeat(choice($.escape_sequence, token.immediate("''"), $._single_string_content)), token.immediate("'")),
    ),

    quoted_continuation_string: $ => token(/"[ \t]*\r?\n[ \t]*\([^)\r\n]*\r?\n(?:[ \t]*[^ \t)\n][^\n]*\n|[ \t]*\n)*[ \t]*\)[ \t]*"/),

    _double_string_content: $ => token.immediate(/[^"`\r\n]+/),

    _single_string_content: $ => token.immediate(/[^'`\r\n]+/),

    escape_sequence: $ => token.immediate(seq(
      '`',
      choice('n', 't', 'r', '`', '"', "'")
    )),

    number: $ => choice(
      /0[xX][0-9a-fA-F]+/,
      /\d+\.\d+/,
      /\d+/,
    ),

    // Return statement with optional expression
    // Uses external scanner to detect when next line is a label
    // to prevent consuming the label's identifier as return value
    return_statement: $ => prec.right(choice(
      seq('return', $._statement_end),  // Bare return before label
      seq('return', $._expression),      // Return with expression
      'return',                          // Bare return (fallback)
    )),

    keyword: $ => choice(
      // All keywords are lowercase only to avoid parser bloat
      // Case-insensitive patterns cause exponential state explosion
      'break', 'continue', 'goto', 'gosub',
      'global', 'local', 'static',
      'throw',
      'new',
    ),

    identifier: $ => /[a-zA-Z_\u0080-\uFFFF][a-zA-Z0-9_\u0080-\uFFFF]*/,

    // Remaining punctuation - NOT parens/brackets/braces which have semantic meaning
