test/corpus/control_flow.txt
================================================================================
Simple if statement
================================================================================

if (x) {
    y := 1
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))))

================================================================================
If-else statement
================================================================================

if (x) {
    a := 1
} else {
    b := 2
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))
    alternative: (else_clause
      (statement_block
        (block
          (assignment_expression
            left: (identifier)
            right: (number)))))))

================================================================================
If-else if-else chain
================================================================================

if (a) {
    x := 1
} else if (b) {
    x := 2
} else {
    x := 3
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))
    alternative: (else_clause
      (if_statement
        condition: (parenthesized_expression
          (identifier))
        consequence: (statement_block
          (block
            (assignment_expression
              left: (identifier)
              right: (number))))
        alternative: (else_clause
          (statement_block
            (block
              (assignment_expression
                left: (identifier)
                right: (number)))))))))

================================================================================
While statement
================================================================================

while (running) {
    DoWork()
}

--------------------------------------------------------------------------------

(source_file
  (while_statement
    condition: (parenthesized_expression
      (identifier))
    body: (statement_block
      (block
        (function_call
          name: (identifier))))))

================================================================================
Simple loop (infinite)
================================================================================

loop {
    break
}

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    body: (statement_block
      (block
        (keyword)))))

================================================================================
Loop with count
================================================================================

loop 10 {
    count += 1
}

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    count: (number)
    body: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))))

================================================================================
For-in with single variable
================================================================================

for item in collection {
    ProcessItem(item)
}

--------------------------------------------------------------------------------

(source_file
  (for_statement
    key: (identifier)
    collection: (identifier)
    body: (statement_block
      (block
        (function_call
          name: (identifier)
          (argument_list
            (identifier)))))))

================================================================================
For-in with key-value pair
================================================================================

for key, value in myObject {
    result .= key
}

--------------------------------------------------------------------------------

(source_file
  (for_statement
    key: (identifier)
    value: (identifier)
    collection: (identifier)
    body: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
Nested control flow
================================================================================

if (a) {
    while (b) {
        loop 5 {
            x := 1
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (while_statement
          condition: (parenthesized_expression
            (identifier))
          body: (statement_block
            (block
              (loop_statement
                count: (number)
                body: (statement_block
                  (block
                    (assignment_expression
                      left: (identifier)
                      right: (number))))))))))))

================================================================================
Empty blocks
================================================================================

if (x) {
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block)))

================================================================================
Braceless if statement
================================================================================

if (x)
    y := 1

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (assignment_expression
      left: (identifier)
      right: (number))))

================================================================================
Braceless if-else statement
================================================================================

if (x)
    a := 1
else
    b := 2

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (assignment_expression
      left: (identifier)
      right: (number))
    alternative: (else_clause
      (assignment_expression
        left: (identifier)
        right: (number)))))

================================================================================
Braceless while statement
================================================================================

while (running)
    DoWork()

--------------------------------------------------------------------------------

(source_file
  (while_statement
    condition: (parenthesized_expression
      (identifier))
    body: (function_call
      name: (identifier))))

================================================================================
Braceless loop statement
================================================================================

loop 5
    count += 1

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    count: (number)
    body: (assignment_expression
      left: (identifier)
      right: (number))))

================================================================================
Braceless for statement
================================================================================

for item in collection
    ProcessItem(item)

--------------------------------------------------------------------------------

(source_file
  (for_statement
    key: (identifier)
    collection: (identifier)
    body: (function_call
      name: (identifier)
      (argument_list
        (identifier)))))

================================================================================
Dangling else associates with nearest if
================================================================================

if (a)
    if (b)
        x := 1
    else
        x := 2

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (if_statement
      condition: (parenthesized_expression
        (identifier))
      consequence: (assignment_expression
        left: (identifier)
        right: (number))
      alternative: (else_clause
        (assignment_expression
          left: (identifier)
          right: (number))))))

================================================================================
Mixed braced and braceless
================================================================================

if (x) {
    a := 1
} else
    b := 2

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))
    alternative: (else_clause
      (assignment_expression
        left: (identifier)
        right: (number)))))

================================================================================
Loop parse variant
================================================================================

loop, parse, InputVar
{
    result .= field
}

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    type: (loop_type)
    arguments: (loop_arguments)
    body: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
Loop files variant
================================================================================

loop, files, *.txt
{
    count += 1
}

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    type: (loop_type)
    arguments: (loop_arguments)
    body: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))))

================================================================================
Loop read variant
================================================================================

loop, read, input.txt
{
    result .= line
}

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    type: (loop_type)
    arguments: (loop_arguments)
    body: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
Loop reg variant
================================================================================

loop, reg, HKEY_LOCAL_MACHINE
{
    count += 1
}

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    type: (loop_type)
    arguments: (loop_arguments)
    body: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))))

================================================================================
Loop parse braceless
================================================================================

loop, parse, text
    result .= field

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    type: (loop_type)
    arguments: (loop_arguments)
    body: (assignment_expression
      left: (identifier)
      right: (identifier))))

================================================================================
Nested uppercase Loop Files with trailing block comment
================================================================================

OpenFolder(){
    projectPath := ""

    Loop, Files, %projectPath%/*, D
    {
        Loop, Files, %A_LoopFileLongPath%/*, D
        {
            if (A_LoopFileName == "release") {
                run, explorer "%A_LoopFileLongPath%"
                Exit
            }
        }
    }
}

/* xxx */

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (block
      (assignment_expression
        left: (identifier)
        right: (string))
      (loop_statement
        type: (loop_type)
        arguments: (loop_arguments)
        body: (statement_block
          (block
            (loop_statement
              type: (loop_type)
              arguments: (loop_arguments)
              body: (statement_block
                (block
                  (if_statement
                    condition: (parenthesized_expression
                      (binary_expression
                        left: (identifier)
                        right: (string)))
                    consequence: (statement_block
                      (block
                        (command
                          name: (identifier)
                          (command_arguments
                            (identifier)
                            (string)))
                        (identifier))))))))))))
      (block_comment))

================================================================================
If with chained AND conditions
================================================================================

if (x != 5) && (y != 1)
    goto MyLabel

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (binary_expression
        left: (identifier)
        right: (number)))
    condition: (parenthesized_expression
      (binary_expression
        left: (identifier)
        right: (number)))
    consequence: (keyword))
  (identifier))

================================================================================
If with chained OR conditions
================================================================================

if (a = 1) || (b = 2)
    result := true

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (binary_expression
        left: (identifier)
        right: (number)))
    condition: (parenthesized_expression
      (binary_expression
        left: (identifier)
        right: (number)))
    consequence: (assignment_expression
      left: (identifier)
      right: (boolean))))

================================================================================
If with three chained conditions
================================================================================

if (a) && (b) && (c) {
    x := 1
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    condition: (parenthesized_expression
      (identifier))
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))))

================================================================================
If with mixed AND and OR conditions
================================================================================

if (a) && (b) || (c) {
    x := 1
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    condition: (parenthesized_expression
      (identifier))
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (assignment_expression
          left: (identifier)
          right: (number))))))

================================================================================
switch statement basic
================================================================================

switch x {
    case 1:
        MsgBox, One
    default:
        MsgBox, Other
}

--------------------------------------------------------------------------------

(source_file
  (switch_statement
    value: (identifier)
    (case_clause
      values: (number)
      (block
        (command
          name: (identifier)
          (command_arguments
            (identifier)))))
    (default_clause
      (block
        (command
          name: (identifier)
          (command_arguments
            (identifier)))))))

================================================================================
switch with parenthesized expression
================================================================================

switch (e.What) {
    case "ReloadException":
        return
}

--------------------------------------------------------------------------------

(source_file
  (switch_statement
    value: (parenthesized_expression
      (member_expression
        object: (identifier)
        property: (identifier)))
    (case_clause
      values: (string)
      (block
        (return_statement)))))

================================================================================
switch with multiple case values
================================================================================

switch x {
    case 1, 2, 3:
        MsgBox, Small
    case 4, 5:
        MsgBox, Medium
}

--------------------------------------------------------------------------------

(source_file
  (switch_statement
    value: (identifier)
    (case_clause
      values: (number)
      values: (number)
      values: (number)
      (block
        (command
          name: (identifier)
          (command_arguments
            (identifier)))))
    (case_clause
      values: (number)
      values: (number)
      (block
        (command
          name: (identifier)
          (command_arguments
            (identifier)))))))

================================================================================
switch with string cases
================================================================================

switch action {
    case "save":
        Save()
    case "load":
        Load()
    default:
        MsgBox, Unknown
}

--------------------------------------------------------------------------------

(source_file
  (switch_statement
    value: (identifier)
    (case_clause
      values: (string)
      (block
        (function_call
          name: (identifier))))
    (case_clause
      values: (string)
      (block
        (function_call
          name: (identifier))))
    (default_clause
      (block
        (command
          name: (identifier)
          (command_arguments
            (identifier)))))))

================================================================================
Return without value
================================================================================

return

--------------------------------------------------------------------------------

(source_file
  (return_statement))

================================================================================
Return with expression
================================================================================

return this

--------------------------------------------------------------------------------

(source_file
  (return_statement
    (this_expression)))

================================================================================
Return with number
================================================================================

return 42

--------------------------------------------------------------------------------

(source_file
  (return_statement
    (number)))

================================================================================
Return with member expression
================================================================================

return this.value

--------------------------------------------------------------------------------

(source_file
  (return_statement
    (member_expression
      object: (this_expression)
      property: (identifier))))

================================================================================
Return in if block
================================================================================

if (x) {
    return value
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (parenthesized_expression
      (identifier))
    consequence: (statement_block
      (block
        (return_statement
          (identifier))))))

================================================================================
Return followed by label
================================================================================

return

MyLabel:
    MsgBox, Hello
return

--------------------------------------------------------------------------------

(source_file
  (return_statement)
  (label
    name: (identifier))
  (command
    name: (identifier)
    (command_arguments
      (identifier)))
  (return_statement))

================================================================================
Return followed by command
================================================================================

return
PostMessage, 0xA1, 2

--------------------------------------------------------------------------------

(source_file
  (return_statement)
  (command
    name: (identifier)
    (command_arguments
      (number)
      (number))))

================================================================================
Return followed by command inside function
================================================================================

MyFunc() {
    if (condition)
        return
    PostMessage, 0xA1, 2
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    body: (block
      (if_statement
        condition: (parenthesized_expression
          (identifier))
        consequence: (return_statement))
      (command
        name: (identifier)
        (command_arguments
          (number)
          (number))))))

================================================================================
Return followed by consecutive labels
================================================================================

return

FirstLabel:
SecondLabel:
    DoSomething()
return

--------------------------------------------------------------------------------

(source_file
  (return_statement)
  (label
    name: (identifier))
  (label
    name: (identifier))
  (function_call
    name: (identifier))
  (return_statement))

================================================================================
Identifier containing hotstring option characters after case
================================================================================

switch x {
    case 1:
        creatureName := "test"
}

--------------------------------------------------------------------------------

(source_file
  (switch_statement
    value: (identifier)
    (case_clause
      values: (number)
      (block
        (assignment_expression
          left: (identifier)
          right: (string))))))
