test/corpus/strings.txt
================================================================================
Simple string
================================================================================

msg := "hello"

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (string)))

================================================================================
String with newline escape
================================================================================

msg := "Hello`nWorld"

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (string
      (escape_sequence))))

================================================================================
String with multiple escapes
================================================================================

msg := "col1`tcol2`tcol3"

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (string
      (escape_sequence)
      (escape_sequence))))

================================================================================
String with escaped backtick
================================================================================

path := "C:``temp``file"

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (string
      (escape_sequence)
      (escape_sequence))))

================================================================================
String with escaped quote
================================================================================

msg := "She said `"Hello`""

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (string
      (escape_sequence)
      (escape_sequence))))

================================================================================
Single quoted string with escape
================================================================================

msg := 'line1`nline2'

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (string
      (escape_sequence))))

================================================================================
String with carriage return escape
================================================================================

msg := "line1`rline2"

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (string
      (escape_sequence))))

================================================================================
Implicit concat with member_expression in function call
================================================================================

FileExist(Config.folder "\" this.file)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (member_expression
        object: (identifier)
        property: (identifier))
      (string)
      (member_expression
        object: (this_expression)
        property: (identifier)))))

================================================================================
Implicit concat member_expression then string then member_expression
================================================================================

Log(obj.prefix ": " obj.suffix)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (member_expression
        object: (identifier)
        property: (identifier))
      (string)
      (member_expression
        object: (identifier)
        property: (identifier)))))

================================================================================
Implicit concat with nested member_expression
================================================================================

Show(a.b.c "\" x.y.z)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (argument_list
      (member_expression
        object: (member_expression
          object: (identifier)
          property: (identifier))
        property: (identifier))
      (string)
      (member_expression
        object: (member_expression
          object: (identifier)
          property: (identifier))
        property: (identifier)))))

================================================================================
Quoted continuation string assignment
================================================================================

text := "
(
  line one
  line two
)"

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (quoted_continuation_string)))

================================================================================
Return quoted continuation string
================================================================================

return "
(
  line one
  line two
)"

--------------------------------------------------------------------------------

(source_file
  (return_statement
    (quoted_continuation_string)))
